[gd_scene load_steps=9 format=2]

[ext_resource path="res://Tile.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.505882, 0.164706, 0, 1 )
uv1_scale = Vector3( 10, 10, 1 )

[sub_resource type="CubeMesh" id=2]
material = SubResource( 1 )
size = Vector3( 2, 1, 2 )

[sub_resource type="PlaneMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.141176, 0.466667, 0.0980392, 1 )

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
albedo_color = Color( 0, 1, 0.976471, 0.309804 )

[sub_resource type="PlaneMesh" id=6]
material = SubResource( 5 )
size = Vector2( 1.8, 1.8 )

[sub_resource type="ConvexPolygonShape" id=7]
points = PoolVector3Array( -1, 0.5, 1, 1, 0.5, -1, 1, 0.5, 1, -1, 0.5, -1, -1, -0.5, 1, 1, -0.5, -1, 1, -0.5, 1, -1, -0.5, -1, 1, 0.5, 1, -1, 0.5, -1, 1, 0.5, -1, -1, 0.5, 1, 1, -0.5, 1, -1, -0.5, -1, 1, -0.5, -1, -1, -0.5, 1, 1, 0.5, 1, -1, -0.5, 1, -1, 0.5, 1, 1, -0.5, 1, 1, 0.5, -1, -1, -0.5, -1, -1, 0.5, -1, 1, -0.5, -1 )

[node name="Tile" type="Spatial"]
script = ExtResource( 1 )

[node name="TileMesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="Rays" type="Spatial" parent="TileMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )

[node name="AboveArea" type="RayCast" parent="TileMesh/Rays"]
visible = false
enabled = true
cast_to = Vector3( 0, 3, 0 )
collide_with_areas = true
collide_with_bodies = false

[node name="AboveBody" type="RayCast" parent="TileMesh/Rays"]
visible = false
enabled = true
cast_to = Vector3( 0, 2, 0 )

[node name="Left" type="RayCast" parent="TileMesh/Rays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 4, 0 )
visible = false
enabled = true
cast_to = Vector3( 0, -8, 0 )
collide_with_areas = true
collide_with_bodies = false

[node name="Right" type="RayCast" parent="TileMesh/Rays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 4, 0 )
visible = false
enabled = true
cast_to = Vector3( 0, -8, 0 )
collide_with_areas = true
collide_with_bodies = false

[node name="Up" type="RayCast" parent="TileMesh/Rays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 2 )
visible = false
enabled = true
cast_to = Vector3( 0, -8, 0 )
collide_with_areas = true
collide_with_bodies = false

[node name="Down" type="RayCast" parent="TileMesh/Rays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, -2 )
visible = false
enabled = true
cast_to = Vector3( 0, -8, 0 )
collide_with_areas = true
collide_with_bodies = false

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.001, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="AvailabilityIndicator" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.002, 0 )
mesh = SubResource( 6 )
material/0 = null

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 7 )
